refactor: test tag

--- a/normalDemo/index.html
+++ b/normalDemo/index.html
@@ -72,7 +72,7 @@
         </tbody>
       </table>
   </body>
-  <script src="./resizable-columns-table.js"></script>
+  <script src="../dist/resizable-columns-table.js"></script>
   <script>
     const domElemTableList = document.querySelectorAll('.table');
     createColResizable(domElemTableList[0], {
