chore: update demo setting

--- a/normalDemo/index.html
+++ b/normalDemo/index.html
@@ -6,7 +6,7 @@
   <title>normal demo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet">
-  <link rel="stylesheet" href="./index.css">
+  <link rel="stylesheet" href="../assets/index.css">
 </head>
   <body>
       <h4>liveDrag: true</h4>
